; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/cgame/extr_cg_newdraw.c_CG_GetSelectedPlayer.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/cgame/extr_cg_newdraw.c_CG_GetSelectedPlayer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@cg_currentSelectedPlayer = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@numSortedTeamPlayers = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CG_GetSelectedPlayer() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cg_currentSelectedPlayer, i32 0, i32 0), align 8
  %2 = icmp slt i64 %1, 0
  br i1 %2, label %7, label %3

3:                                                ; preds = %0
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cg_currentSelectedPlayer, i32 0, i32 0), align 8
  %5 = load i64, i64* @numSortedTeamPlayers, align 8
  %6 = icmp sge i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %3, %0
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cg_currentSelectedPlayer, i32 0, i32 0), align 8
  br label %8

8:                                                ; preds = %7, %3
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cg_currentSelectedPlayer, i32 0, i32 0), align 8
  %10 = trunc i64 %9 to i32
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
